Add classes, styles for two pages

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,15 +10,18 @@
 /* text colors */
 --accent-text-color: #2196F3;
 --main-text-color: #212121;
---light-main-color: #FFFFFF;
+--light-text-color: #FFFFFF;
+--dark-text-color: #000000;
 --submain-text-color: #757575;
+--sub-text-color-trans: rgba(255, 255, 255, 0.6);
 /* background colors */
 --accent-bg-color: #2196F3;
---main-bg-color: #F5F5F5;
+--main-bg-color: #FFFFFF;
 --submain-bg-color: #F5F4FA;
 --dark-bg-color: #2F303A;
-/* active */
+/* actions */
 --active-color: #2196F3;
+--active-bg-color: #2196F3;
 }
 
 body {
@@ -28,4 +31,189 @@ body {
     background-color: var(--main-bg-color);
 }
 
+.link {
+    text-decoration: none;
+}
 
+.list {
+    list-style-type: none;
+}
+
+.logo {
+    font-family: var(--submain-font-family);
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.19;
+    letter-spacing: 0.03em;
+    color: var(--dark-text-color);
+}
+
+.accent {
+    color: var(--accent-text-color);
+}
+
+/* Header */ 
+.current-text {
+    color:var(--active-color)
+}
+
+.menu-link {
+    font-weight: 500;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+}
+
+.menu-link:hover, .menu-link:focus {
+    color: var(--active-color)
+}
+
+.header-contacts-link {
+    font-weight: 500;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    color: var(--submain-text-color);
+}
+
+.header-contacts-link:hover, .header-contacts-link:focus {
+    color: var(--active-color)
+}
+
+/* Main */ 
+.section-header {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.17;
+    text-align: center;
+    letter-spacing: 0.03em;
+}
+
+/* Hero */
+.hero-header {
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.36;
+    text-align: center;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+    color: var(--light-text-color);
+    background-color: var(--dark-bg-color); /*Add to see white text on white bg, need to be delete after add section bg*/
+}
+
+.hero-btn {
+    font-family: inherit;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+    text-align: center;
+    letter-spacing: 0.06em;
+    color: var(--light-text-color);
+    background-color: var(--accent-bg-color);
+    border: none;
+    cursor: pointer;
+}
+
+/* Our benefits */
+.benafit-header {
+    font-weight: 700;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+}
+
+.benafit-text {
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    color: var(--submain-text-color);
+}
+
+/* What we do */
+
+/* Our team */
+.team {
+    background-color: var(--submain-bg-color);
+}
+
+.team-item {
+    background-color: var(--main-bg-color);
+}
+
+.team-header {
+    font-weight: 500;
+    font-size: var(--submain-font-size);
+    line-height: 1.19;
+    text-align: center;
+    letter-spacing: 0.03em;
+}
+
+.team-text {
+    font-size: var(--submain-font-size);
+    line-height: 1.19;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--submain-text-color);
+}
+
+/* Footer */
+.footer{ 
+    background-color: var(--dark-bg-color);
+}    
+
+.logo-white {
+    color: var(--light-text-color);
+}
+
+.contacts {
+    font-style: normal;
+}
+
+.contact-link {
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    color: var(--sub-text-color-trans);
+}
+
+.contact-link:hover, .contact-link:focus {
+    color: var(--active-color);
+}
+
+.address {
+    color: var(--light-text-color);
+}
+
+/* Portfolio */
+.page-portfolio {
+    font-size: 16px;
+}
+
+.filter-btn {
+    font-family: inherit;
+    font-weight: 500;
+    line-height: 1.62;
+    text-align: center;
+    letter-spacing: 0.03em;
+    background-color: var(--submain-bg-color);
+    cursor: pointer;
+    border: none;
+}
+
+.current-bg {
+    color: var(--light-text-color);
+    background-color: var(--active-bg-color);
+}
+
+.filter-btn:hover, .filter-btn:focus {
+    color:var(--light-text-color);
+    background-color: var(--active-color);
+}
+
+.portfolio-item-header {
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 2;
+    letter-spacing: 0.06em;
+}
+
+.portfolio-item-text {
+    line-height: 1.88;
+    letter-spacing: 0.03em;
+}
