--- a/css/styles.css
+++ b/css/styles.css
@@ -61,6 +61,7 @@ body {
     font-weight: 500;
     line-height: 1.14;
     letter-spacing: 0.02em;
+    color: var(--main-text-color);
 }
 
 .menu-link:hover, .menu-link:focus {
@@ -191,6 +192,7 @@ body {
 
 .filter-btn {
     font-family: inherit;
+    font-size: 16px;
     font-weight: 500;
     line-height: 1.62;
     text-align: center;
@@ -215,9 +217,11 @@ body {
     font-size: 18px;
     line-height: 2;
     letter-spacing: 0.06em;
+    color: var(--main-text-color)
 }
 
 .portfolio-item-text {
     line-height: 1.88;
     letter-spacing: 0.03em;
+    color: var(--submain-text-color);
 }
