--- a/css/styles.css
+++ b/css/styles.css
@@ -52,16 +52,29 @@ body {
     color: var(--accent-text-color);
 }
 
-/* Header */ 
-.current-text {
-    color:var(--active-color)
+.visually-hidden {
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+    border: 0;
+    padding: 0;
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    margin: -1px;
 }
 
+/* Header */ 
 .menu-link {
     font-weight: 500;
     line-height: 1.14;
     letter-spacing: 0.02em;
     color: var(--main-text-color);
+}
+
+.current-text {
+    color: var(--active-color)
 }
 
 .menu-link:hover, .menu-link:focus {
@@ -119,6 +132,7 @@ body {
 
 /* Our benefits */
 .benafit-header {
+    font-size: var(--main-font-size);
     font-weight: 700;
     line-height: 1.14;
     letter-spacing: 0.03em;
